// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getRowBorderRadius Get correct row border radius for left column with three and more nested columns 1`] = `
Object {
  "bo.ra.bl": 182,
  "bo.ra.tl": 180,
}
`;

exports[`getRowBorderRadius Get correct row border radius for left column with two nested columns 1`] = `
Object {
  "bo.ra.bl": 182,
  "bo.ra.tl": 180,
}
`;

exports[`getRowBorderRadius Get correct row border radius for not lateral column with three and more nested columns 1`] = `Object {}`;

exports[`getRowBorderRadius Get correct row border radius for right column with three and more nested columns 1`] = `
Object {
  "bo.ra.br": 183,
  "bo.ra.tr": 181,
}
`;

exports[`getRowBorderRadius Get correct row border radius for right column with two nested columns 1`] = `
Object {
  "bo.ra.br": 183,
  "bo.ra.tr": 181,
}
`;

exports[`getRowBorderRadius Get correct row border radius with one nested column 1`] = `
Object {
  "bo.ra.bl": 182,
  "bo.ra.br": 183,
  "bo.ra.tl": 180,
  "bo.ra.tr": 181,
}
`;
